# system-administration-22f

hw2/: hw2.sh
hw2/sample/: example.hw2
hw3/: README.md
hw3/docs/: part1.md  part2.md  part3.md
hw3/ftp_watchd/: uploadscript.py
hw3/part2-scripts/: ftp_watchd  uploadscript.py
hw3/zfsbak/: zfsbak
hw3/zfsbak/snapshot/: __init__.py  controller.py  model.py  view.py
hw4/: .gitignore  README.md
hw4/4-1/: init.sh  pyproject.toml  up
hw4/4-1/data/: Caddyfile.sample
hw4/4-1/src/: auth.py  main.py  utils.py
hw4/4-2/: up
hw4/4-2/data/: Caddyfile.sample
hw4/4-2/src/: check-stat.sh
hw4/4-3/: init.sh  pyproject.toml  up
hw4/4-3/data/: Caddyfile.sample
hw4/4-3/src/: main.py  run-api-server.sh  setup-config.sh
hw4/4-5/: init.sh  pyproject.toml  up
hw4/4-5/src/: main.py
hw4/preflight/: up
hw4/preflight/data/: Caddyfile.sample
hw4/preflight/src/: setup-cname.sh
